# srvb

./: .gitignore  .gitmodules  CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  README.md  WebViewEditor.cpp  WebViewEditor.h  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
dsp/: RefMap.js  main.js  srvb.js
js/: main.js  manifest.json  package-lock.json  package.json  vite.config.js
js/dsp/: main.js  srvb.js
js/src/: DragBehavior.jsx  Interface.jsx
js/ui/: index.html  package-lock.json  package.json
js/ui/src/: Interface.jsx  Knob.jsx  main.jsx
native/: CMakeLists.txt  LambdaTimer.h  PluginProcessor.cpp  PluginProcessor.h  WebViewEditor.cpp  WebViewEditor.h
scripts/: build-native.mjs
src/: Interface.jsx  Knob.jsx  index.css  main.jsx
